...
//                .tabItem {
//                    Label("Current", systemImage: "sun.max.fill")
//                }
//            
//            FiveDayForecastView(viewModel: viewModel)
//                .tabItem {
//                    Label("5-Day Forecast", systemImage: "calendar")
//                }
//        }
//        .onAppear {
//            viewModel.loadCachedWeatherData()
//        }
//    }
...
                    Text(errorMessage)
                        .foregroundColor(.red)
                } else if let currentWeather = viewModel.currentWeather {
                    CurrentWeatherView(weatherData: currentWeather, viewModel: viewModel)
                    
                    NavigationLink(destination: FiveDayForecastView(viewModel: viewModel)) {
                        Text("Five Day Forecast")
                            .font(.headline)
                            .padding()
                            .background(Color.blue)
                            .foregroundColor(.white)
                            .cornerRadius(10)
                    }
...
